--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "mysql": "^2.18.1"
   }
 }
