--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.7.5"
+    "nodemailer": "^6.7.5",
+    "validator": "^13.7.0"
   }
 }
