--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.5",
+    "path": "^0.12.7",
     "validator": "^13.7.0"
   }
 }
